GNOME Bugzilla – Bug 704203
gnome-panel white background instead of gradient color.
Last modified: 2013-09-26 03:53:12 UTC
Overview: In ubuntu with gnome-session-fallback gnome-panel has white background instead of gradient color. Ambiance theme. It works if I downgrade gtk to version 3.6.x. So I am thinking that it could be regression with gtk, but maybe I am wrong. If so, can someone of gtk devs comment on this? I would love to hear about changes made to gtk and probably some info on how to fix gnome-panel. Steps to Reproduce: Download latest available ubuntu development release, install gnome-session-fallback. When logged in, you will see white color instead of gradient. Gradient will show up when open panel properties, switch to background tab. Change from none to solid color, than back from solid color to none. gradient shows up. Actual Results: Gnome panel has white color as background. Expected Results: Gnome panel with gradient as background.
This doesn't affect Adwaita. Please ask the developers of your theme to make their theme compatible with GTK 3.8. https://bugs.launchpad.net/ubuntu/+source/ubuntu-themes/+bug/1196177
Yes, it doesn't affect Adwaita, because it doesn't use gradient for gnome-panel. Installed gnome-themes-standard, changed gtk theme to adwaita, gnome-panel got simple black color as background.
OK, reassigning to gnome-panel as there's still not enough information here to say that this is a GTK bug.
Created attachment 249240 [details] [review] possible fix for this bug This change fixed problem for me. I did not see any side effects with this change. But maybe it needs more testing.
Ok, I was wrong, it dosn' t fix problem... :( I guess it is realy not gnome-panel bug. There is nothing wrong with default_pattern in panel-background.c. It is always passed to gdk_window_set_background_pattern.
Created attachment 249663 [details] [review] gnome-panel improvements... Fix gnome-panel background (this bug); Fix gnome-panel creation under two or more separate x screens (https://bugzilla.gnome.org/show_bug.cgi?id=704019)
Correct patch is attached to this bug - https://bugzilla.gnome.org/show_bug.cgi?id=704019. It will fix this bug too.
Please post seperate patches for seperate bugs, if at all possible. Extracting the missing hunk from attachment #251305 [details] now...
Created attachment 255792 [details] [review] Only last hunk of proposed attachment #251305 [details]
Comment on attachment 255792 [details] [review] Only last hunk of proposed attachment #251305 [details] Disregard this patch; Alberts _had_ sent in a seperate patch, which was actually included in the 3.8.0 release as commit https://git.gnome.org/browse/gnome-panel/commit/?id=ce8b3fcb101d1795bb3ab99f767e60b44f4a08e8 . He just hadn't attached it here, which caused me to be confused.
Fixed in 3.8.0; closing.