panel: fix gnome-panel background

Closes bug https://bugzilla.gnome.org/show_bug.cgi?id=704203